[gd_scene load_steps=2 format=3 uid="uid://cfmh7yeows1cy"]

[ext_resource type="Script" uid="uid://bhu7i1esjaqxm" path="res://Scenes/Menus/team_manager.gd" id="1_duhth"]

[node name="TeamManager" type="Node2D"]
script = ExtResource("1_duhth")

[node name="TMPanel" type="Panel" parent="."]
visible = false
offset_right = 1922.0
offset_bottom = 1077.0

[node name="Pokemon1" type="Button" parent="TMPanel"]
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 900.0
offset_bottom = 250.0

[node name="PokemonName1" type="Label" parent="TMPanel/Pokemon1"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 0
offset_left = 150.0
offset_right = 650.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Pokemon1"
vertical_alignment = 1

[node name="PokemonLvl1" type="Label" parent="TMPanel/Pokemon1"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 650.0
offset_right = 700.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Lvl"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonGender1" type="Label" parent="TMPanel/Pokemon1"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Gender"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonPic1" type="Label" parent="TMPanel/Pokemon1"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 30
text = "Pic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonHP1" type="Label" parent="TMPanel/Pokemon1"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -75.0
offset_right = 650.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "HP"
vertical_alignment = 1

[node name="PokemonStatus1" type="Label" parent="TMPanel/Pokemon1"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PMPanel1" type="Panel" parent="TMPanel/Pokemon1"]
visible = false
self_modulate = Color(0, 0, 0, 1)
top_level = true
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = -1
offset_left = 900.0
offset_top = 100.0
offset_right = 1100.0
offset_bottom = 350.0

[node name="PM1Info" type="Button" parent="TMPanel/Pokemon1/PMPanel1"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Info"

[node name="PM1Swap" type="Button" parent="TMPanel/Pokemon1/PMPanel1"]
layout_mode = 0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "Swap"

[node name="PM1Evolve" type="Button" parent="TMPanel/Pokemon1/PMPanel1"]
layout_mode = 0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "Evolve"

[node name="PM1Item" type="Button" parent="TMPanel/Pokemon1/PMPanel1"]
layout_mode = 0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
text = "Item"

[node name="PM1Release" type="Button" parent="TMPanel/Pokemon1/PMPanel1"]
layout_mode = 0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 250.0
text = "Release"

[node name="Backround1" type="ColorRect" parent="TMPanel/Pokemon1/PMPanel1"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 250.0

[node name="Pokemon2" type="Button" parent="TMPanel"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -900.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = 250.0
grow_horizontal = 0

[node name="PokemonName2" type="Label" parent="TMPanel/Pokemon2"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 0
offset_left = 150.0
offset_right = 650.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Pokemon2"
vertical_alignment = 1

[node name="PokemonLvl2" type="Label" parent="TMPanel/Pokemon2"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 650.0
offset_right = 700.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Lvl"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonGender2" type="Label" parent="TMPanel/Pokemon2"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Gender"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonPic2" type="Label" parent="TMPanel/Pokemon2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 30
text = "Pic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonHP2" type="Label" parent="TMPanel/Pokemon2"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -75.0
offset_right = 650.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "HP"
vertical_alignment = 1

[node name="PokemonStatus2" type="Label" parent="TMPanel/Pokemon2"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PMPanel2" type="Panel" parent="TMPanel/Pokemon2"]
visible = false
self_modulate = Color(0, 0, 0, 1)
top_level = true
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = -1
offset_left = 822.0
offset_top = 100.0
offset_right = 1022.0
offset_bottom = 350.0

[node name="PM2Info" type="Button" parent="TMPanel/Pokemon2/PMPanel2"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Info"

[node name="PM2Swap" type="Button" parent="TMPanel/Pokemon2/PMPanel2"]
layout_mode = 0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "Swap"

[node name="PM2Evolve" type="Button" parent="TMPanel/Pokemon2/PMPanel2"]
layout_mode = 0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "Evolve"

[node name="PM2Item" type="Button" parent="TMPanel/Pokemon2/PMPanel2"]
layout_mode = 0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
text = "Item"

[node name="PM2Release" type="Button" parent="TMPanel/Pokemon2/PMPanel2"]
layout_mode = 0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 250.0
text = "Release"

[node name="Backround2" type="ColorRect" parent="TMPanel/Pokemon2/PMPanel2"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 250.0

[node name="Pokemon3" type="Button" parent="TMPanel"]
layout_mode = 0
offset_left = 100.0
offset_top = 300.0
offset_right = 900.0
offset_bottom = 450.0

[node name="PokemonName3" type="Label" parent="TMPanel/Pokemon3"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 0
offset_left = 150.0
offset_right = 650.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Pokemon3"
vertical_alignment = 1

[node name="PokemonLvl3" type="Label" parent="TMPanel/Pokemon3"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 650.0
offset_right = 700.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Lvl"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonGender3" type="Label" parent="TMPanel/Pokemon3"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Gender"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabePokemonPic3" type="Label" parent="TMPanel/Pokemon3"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 30
text = "Pic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonHP3" type="Label" parent="TMPanel/Pokemon3"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -75.0
offset_right = 650.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "HP"
vertical_alignment = 1

[node name="PokemonStatus3" type="Label" parent="TMPanel/Pokemon3"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PMPanel3" type="Panel" parent="TMPanel/Pokemon3"]
visible = false
self_modulate = Color(0, 0, 0, 1)
top_level = true
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = -1
offset_left = 900.0
offset_top = 300.0
offset_right = 1100.0
offset_bottom = 550.0

[node name="PM3Info" type="Button" parent="TMPanel/Pokemon3/PMPanel3"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Info"

[node name="PM3Swap" type="Button" parent="TMPanel/Pokemon3/PMPanel3"]
layout_mode = 0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "Swap"

[node name="PM3Evolve" type="Button" parent="TMPanel/Pokemon3/PMPanel3"]
layout_mode = 0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "Evolve"

[node name="PM3Item" type="Button" parent="TMPanel/Pokemon3/PMPanel3"]
layout_mode = 0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
text = "Item"

[node name="PM3Release" type="Button" parent="TMPanel/Pokemon3/PMPanel3"]
layout_mode = 0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 250.0
text = "Release"

[node name="Backround3" type="ColorRect" parent="TMPanel/Pokemon3/PMPanel3"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 250.0

[node name="Pokemon4" type="Button" parent="TMPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -900.0
offset_top = 300.0
offset_right = -100.0
offset_bottom = 450.0
grow_horizontal = 0

[node name="PokemonName4" type="Label" parent="TMPanel/Pokemon4"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 0
offset_left = 150.0
offset_right = 650.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Pokemon4"
vertical_alignment = 1

[node name="PokemonLvl4" type="Label" parent="TMPanel/Pokemon4"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 650.0
offset_right = 700.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Lvl"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonGender4" type="Label" parent="TMPanel/Pokemon4"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Gender"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonPic4" type="Label" parent="TMPanel/Pokemon4"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 30
text = "Pic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonHP4" type="Label" parent="TMPanel/Pokemon4"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -75.0
offset_right = 650.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "HP"
vertical_alignment = 1

[node name="PokemonStatus4" type="Label" parent="TMPanel/Pokemon4"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PMPanel4" type="Panel" parent="TMPanel/Pokemon4"]
visible = false
self_modulate = Color(0, 0, 0, 1)
top_level = true
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = -1
offset_left = 822.0
offset_top = 300.0
offset_right = 1022.0
offset_bottom = 550.0

[node name="PM4Info" type="Button" parent="TMPanel/Pokemon4/PMPanel4"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Info"

[node name="PM4Swap" type="Button" parent="TMPanel/Pokemon4/PMPanel4"]
layout_mode = 0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "Swap"

[node name="PM4Evolve" type="Button" parent="TMPanel/Pokemon4/PMPanel4"]
layout_mode = 0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "Evolve"

[node name="PM4Item" type="Button" parent="TMPanel/Pokemon4/PMPanel4"]
layout_mode = 0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
text = "Item"

[node name="PM4Release" type="Button" parent="TMPanel/Pokemon4/PMPanel4"]
layout_mode = 0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 250.0
text = "Release"

[node name="Backround4" type="ColorRect" parent="TMPanel/Pokemon4/PMPanel4"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 250.0

[node name="Pokemon5" type="Button" parent="TMPanel"]
layout_mode = 0
offset_left = 100.0
offset_top = 500.0
offset_right = 900.0
offset_bottom = 650.0

[node name="PokemonName5" type="Label" parent="TMPanel/Pokemon5"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 0
offset_left = 150.0
offset_right = 650.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Pokemon5"
vertical_alignment = 1

[node name="PokemonLvl5" type="Label" parent="TMPanel/Pokemon5"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 650.0
offset_right = 700.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Lvl"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonGender5" type="Label" parent="TMPanel/Pokemon5"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Gender"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonPic5" type="Label" parent="TMPanel/Pokemon5"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 30
text = "Pic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonHP5" type="Label" parent="TMPanel/Pokemon5"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -75.0
offset_right = 650.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "HP"
vertical_alignment = 1

[node name="PokemonStatus5" type="Label" parent="TMPanel/Pokemon5"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PMPanel5" type="Panel" parent="TMPanel/Pokemon5"]
visible = false
self_modulate = Color(0, 0, 0, 1)
top_level = true
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = -1
offset_left = 900.0
offset_top = 500.0
offset_right = 1100.0
offset_bottom = 750.0

[node name="PM5Info" type="Button" parent="TMPanel/Pokemon5/PMPanel5"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Info"

[node name="PM5Swap" type="Button" parent="TMPanel/Pokemon5/PMPanel5"]
layout_mode = 0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "Swap"

[node name="PM5Evolve" type="Button" parent="TMPanel/Pokemon5/PMPanel5"]
layout_mode = 0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "Evolve"

[node name="PM5Item" type="Button" parent="TMPanel/Pokemon5/PMPanel5"]
layout_mode = 0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
text = "Item"

[node name="PM5Release" type="Button" parent="TMPanel/Pokemon5/PMPanel5"]
layout_mode = 0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 250.0
text = "Release"

[node name="Backround5" type="ColorRect" parent="TMPanel/Pokemon5/PMPanel5"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 250.0

[node name="Pokemon6" type="Button" parent="TMPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -900.0
offset_top = 500.0
offset_right = -100.0
offset_bottom = 650.0
grow_horizontal = 0

[node name="PokemonName6" type="Label" parent="TMPanel/Pokemon6"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 0
offset_left = 150.0
offset_right = 650.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Pokemon6"
vertical_alignment = 1

[node name="PokemonLvl6" type="Label" parent="TMPanel/Pokemon6"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 650.0
offset_right = 700.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Lvl"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonGender6" type="Label" parent="TMPanel/Pokemon6"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Gender"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonPic6" type="Label" parent="TMPanel/Pokemon6"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 30
text = "Pic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokemonHP6" type="Label" parent="TMPanel/Pokemon6"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -75.0
offset_right = 650.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "HP"
vertical_alignment = 1

[node name="PokemonStatus6" type="Label" parent="TMPanel/Pokemon6"]
custom_minimum_size = Vector2(50, 75)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -75.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PMPanel6" type="Panel" parent="TMPanel/Pokemon6"]
visible = false
self_modulate = Color(0, 0, 0, 1)
top_level = true
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = -1
offset_left = 822.0
offset_top = 500.0
offset_right = 1022.0
offset_bottom = 750.0

[node name="PM6Info" type="Button" parent="TMPanel/Pokemon6/PMPanel6"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Info"

[node name="PM6Swap" type="Button" parent="TMPanel/Pokemon6/PMPanel6"]
layout_mode = 0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "Swap"

[node name="PM6Evolve" type="Button" parent="TMPanel/Pokemon6/PMPanel6"]
layout_mode = 0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "Evolve"

[node name="PM6Item" type="Button" parent="TMPanel/Pokemon6/PMPanel6"]
layout_mode = 0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
text = "Item"

[node name="PM6Release" type="Button" parent="TMPanel/Pokemon6/PMPanel6"]
layout_mode = 0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 250.0
text = "Release"

[node name="Backround6" type="ColorRect" parent="TMPanel/Pokemon6/PMPanel6"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 250.0

[node name="BackButton" type="Button" parent="TMPanel"]
layout_mode = 0
offset_left = 700.0
offset_top = 900.0
offset_right = 1220.0
offset_bottom = 1000.0
theme_override_font_sizes/font_size = 50
text = "Back"

[connection signal="pressed" from="TMPanel/BackButton" to="." method="_on_back_button_pressed"]
